-- For _cabal_ documentation, see http://haskell.org/cabal/users-guide/

name:                joan-j
version:             0.1.0.0
synopsis:            Toy GPIO app for Raspberry Pi
homepage:            https://github.com/EvgenyNerush/joan-j
license:             BSD3
license-file:        LICENSE
author:              Evgeny Nerush
maintainer:          eugene dot nerush at gmail dot com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable joan-j
  main-is:             Main.hs
  other-modules:       Examples
  build-depends:       base >=4.6 && <5
                     , wiringPi >=0.1
  default-language:    Haskell2010
